--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -171,6 +171,8 @@ config BMIPS_GENERIC
 	select USB_OHCI_BIG_ENDIAN_DESC if CPU_BIG_ENDIAN
 	select USB_OHCI_BIG_ENDIAN_MMIO if CPU_BIG_ENDIAN
 	select ARCH_WANT_OPTIONAL_GPIOLIB
+	select HW_HAS_PCI
+	select MIPS_GENERIC_PCI
 	help
 	  Build a generic DT-based kernel image that boots on select
 	  BCM33xx cable modem chips, BCM63xx DSL chips, and BCM7xxx set-top
