MIPS: BMIPS: Fix PCIE RC resource on 7435
The PCIE RC resource ends at BCHP_HIF_PCIe_RG_REG_END, which is at 0x0041930c.
The previous value was auto-generated from a wrong RDB.

refs #SWLINUX-3831, refs #SWLINUX-3864

Signed-off-by: Florian Fainelli <florian.fainelli@broadcom.com>

--- a/arch/mips/boot/dts/brcm/bcm7435.dtsi
+++ b/arch/mips/boot/dts/brcm/bcm7435.dtsi
@@ -55,7 +55,7 @@
 	};
 
 	pcie: pcie@10410000 {
-		reg = <0x10410000 0xc024>;
+		reg = <0x10410000 0x930c>;
 		interrupts = <0x27>, <0x27>;
 		interrupt-names = "pcie", "msi";
 		interrupt-parent = <&periph_intc>;
